--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	  <script src="https://kit.fontawesome.com/0b3eb0d831.js" crossorigin="anonymous"></script>
+	  <script defer src="https://kit.fontawesome.com/0b3eb0d831.js" crossorigin="anonymous"></script>
+	  <link rel="preconnect" href="https://fonts.googleapis.com" />
+	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
     <title>Kuepa</title>
   </head>
   <body>
